# learning

./: .gitignore  README.md  boolean-logic.ipynb  collections.ipynb  functions.py  miscellaneous.ipynb  password_generator.py  pyproject.toml  requirements.txt
collections/: lists.ipynb  slicing.ipynb  strings.ipynb
csv_to_json/: users.csv  users.json  users.py
flow-of-control/: if-else.ipynb  loops.ipynb
homework/: 12_june_2021.py  30_may_2021.ipynb  3_june_2021.py  6_june_2021.py  9_june_2021.py  guessinggame.py  may_12_2021.ipynb  may_16_2021.ipynb  may_23_2021.ipynb  may_26_2021.ipynb  may_9_2021.ipynb
homework/2021/july/: eleventh.py  fourth.py  fourth.txt  seventeenth.py  seventh.py  seventh.txt  tenth.py  twenty_five.py  twenty_second.py
homework/2021/june/: my_hangman.py  my_word.txt  nineteenth.py  ninth.py  sixth.py  twelve.py
homework/2021/may/: ninth.ipynb  thirty.ipynb  twenty_three.ipynb
