[tool.poetry]
name = "learning"
version = "0.1.0"
description = "A repository which contains all my codes that I am learning."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.15"
ipython = "^7.23.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = {version = "^21.5b1", allow-prereleases = true}
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
